# cinder-starter

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.txt  mkdocs.yml
.devcontainer/: Dockerfile  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  deploy.yml
docs/: getting_started.md  index.md  project_structure.md
include/: MyProject.h
src/: MyProject.cpp
tests/: CMakeLists.txt
